fixes #64 wrapped table demo in a card

--- a/sass/inc/_card.scss
+++ b/sass/inc/_card.scss
@@ -48,6 +48,8 @@
 
   &__body {
     padding: $card-padding;
+
+    &--nopadding { padding: 0; }
   }
 
   &__title {
